fixed the bottom menu issue where not full data was visible in widget section.

--- a/widget/assets/css/style.css
+++ b/widget/assets/css/style.css
@@ -9,7 +9,7 @@
 .sticky-bottom-menu {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 94%;
     overflow-y: auto;
 }
 
